--- a/common/package.json
+++ b/common/package.json
@@ -1,11 +1,16 @@
 {
   "name": "@{{OrganizationName}}/common",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "",
-  "main": "index.js",
+  "main": "./build/index.js",
+  "types": "./build/index.d.ts",
+  "files": [
+    "build/**/*"
+  ],
   "scripts": {
     "clean": "del ./build/*",
-    "build": "npm run clean && tsc"
+    "build": "npm run clean && tsc",
+    "pub": "git add . && git commit -m \"Updates\" && npm version patch && npm run build && npm publish && echo 'privious commands are for create/updating a package in NPM Registry'"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +18,14 @@
   "devDependencies": {
     "del-cli": "^5.0.0",
     "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "@types/cookie-session": "^2.0.44",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
+    "cookie-session": "^2.0.0",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.1"
   }
 }
