--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -14,7 +14,7 @@ build:
         dockerfile: Dockerfile
       sync:
         manual:
-          - src: "src/**/*.ts"
+          - src: 'src/**/*.ts'
             dest: .
     - image: {dockerUsername}/ticketing-client
       context: client
